--- a/main.scss
+++ b/main.scss
@@ -6,7 +6,7 @@
 @import 'base/typo';
 // LAYOUT
 @import 'layout/header';
-@import 'layout/grid';
+@import 'layout/main';
 @import 'layout/footer';
 @import 'layout/sidebar';
 // COMPONENTS
