--- a/utils/_mixins.scss
+++ b/utils/_mixins.scss
@@ -8,6 +8,8 @@ $breakpoint-mobile: 1000px;
   }
 }
 
+// VERY USEFUL FLEX MIXIN
+
 @mixin flex($justify-content, $flex-direction) {
   display: flex;
   justify-content: $justify-content;
